--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 theme: jekyll-theme-cayman
-title: <center>
-  <img src="./CERFO-logo-horizontal-descripteur-noir.png" alt="Logo de l'entreprise" style="max-width: 200px;">
-</center>
+title: "Nos essences forestières vers le futur"
+descriptor: "Fiches de vulnérabilité des essences commerciales du Québec"
