--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: "Nos essences forestières vers le futur"
-description: "Fiches de vulnérabilité des essences commerciales du Québec"
+title: [Nos essences forestières vers le futur]
+description: [Fiches de vulnérabilité des essences commerciales du Québec]
